Refactor: update project with new java features